--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "grunt": "~0.4.5",
     "grunt-contrib-jshint": "~0.10.0",
     "grunt-contrib-nodeunit": "~0.4.1",
-    "grunt-contrib-uglify": "~0.5.0"
+    "grunt-contrib-uglify": "~0.5.0",
+    "grunt-contrib-watch": "^1.0.0"
   },
   "dependencies": {
     "grunt-contrib-cssmin": "^1.0.2"
